--- a/debian.raspi2/changelog
+++ b/debian.raspi2/changelog
@@ -4,6 +4,13 @@ linux-raspi2 (4.2.0-1014.21) UNRELEASED; urgency=low
   CHANGELOG: Use the printchanges target to see the curent changes.
   CHANGELOG: Use the insertchanges target to create the final log.
 
+  [ Ubuntu: 4.2.0-17.21 ]
+
+  * Release Tracking Bug
+    - LP: #1509480
+  * SAUCE: storvsc: use small sg_tablesize on x86
+    - LP: #1495983
+
  -- Luis Henriques <luis.henriques@canonical.com>  Mon, 26 Oct 2015 16:24:05 +0000
 
 linux-raspi2 (4.2.0-1014.20) wily; urgency=low
