--- a/debian.raspi2/changelog
+++ b/debian.raspi2/changelog
@@ -4,6 +4,14 @@ linux-raspi2 (4.2.0-1018.25) UNRELEASED; urgency=low
   CHANGELOG: Use the printchanges target to see the curent changes.
   CHANGELOG: Use the insertchanges target to create the final log.
 
+  [ Ubuntu: 4.2.0-23.28 ]
+
+  * Release Tracking Bug
+    - LP: #1529361
+  * ovl: fix permission checking for setattr
+    - LP: #1528904
+    - CVE-2015-8660
+
  -- Luis Henriques <luis.henriques@canonical.com>  Mon, 04 Jan 2016 10:57:53 +0000
 
 linux-raspi2 (4.2.0-1017.24) wily; urgency=low
