--- a/debian.raspi2/changelog
+++ b/debian.raspi2/changelog
@@ -4,6 +4,12 @@ linux-raspi2 (4.2.0-1020.27) UNRELEASED; urgency=low
   CHANGELOG: Use the printchanges target to see the curent changes.
   CHANGELOG: Use the insertchanges target to create the final log.
 
+  [ Ubuntu: 4.2.0-25.30 ]
+
+  * KEYS: Fix keyring ref leak in join_session_keyring()
+    - LP: #1534887
+    - CVE-2016-0728
+
  -- Luis Henriques <luis.henriques@canonical.com>  Wed, 13 Jan 2016 10:23:42 +0000
 
 linux-raspi2 (4.2.0-1018.25) wily; urgency=low
