--- a/debian.raspi2/changelog
+++ b/debian.raspi2/changelog
@@ -4,6 +4,12 @@ linux-raspi2 (4.2.0-1021.28) UNRELEASED; urgency=low
   CHANGELOG: Use the printchanges target to see the curent changes.
   CHANGELOG: Use the insertchanges target to create the final log.
 
+  [ Ubuntu: 4.2.0-26.31 ]
+
+  * Release Tracking Bug
+    - LP: #1535795
+  * Merged back Ubuntu-4.2.0-25.30
+
  -- Luis Henriques <luis.henriques@canonical.com>  Wed, 20 Jan 2016 14:00:01 +0000
 
 linux-raspi2 (4.2.0-1020.27) wily; urgency=low
