--- a/debian.raspi2/changelog
+++ b/debian.raspi2/changelog
@@ -4,6 +4,37 @@ linux-raspi2 (4.2.0-1022.29) UNRELEASED; urgency=low
   CHANGELOG: Use the printchanges target to see the curent changes.
   CHANGELOG: Use the insertchanges target to create the final log.
 
+  [ Ubuntu: 4.2.0-27.32 ]
+
+  * Release Tracking Bug
+    - LP: #1536867
+  * SAUCE: (no-up) add compat_uts_machine= kernel command line override
+    - LP: #1520627
+  * SAUCE: (no-up) ACPI / tables: Add acpi_force_32bit_fadt_addr option to
+    force 32 bit FADT addresses
+    - LP: #1529381
+  * SAUCE: (no-up) udp: properly support MSG_PEEK with truncated buffers
+    - LP: #1527902
+  * SAUCE: powerpc/eeh: Validate arch in eeh_add_device_early()
+    - LP: #1486180
+  * SAUCE: (no-up) Revert "[SCSI] libiscsi: Reduce locking contention in
+    fast path"
+    - LP: #1517142
+  * [Config] Add DRM ast driver to udeb installer image
+    - LP: #1514711
+  * net/mlx5e: Re-eanble client vlan TX acceleration
+    - LP: #1533249
+  * net/mlx5e: Fix LSO vlan insertion
+    - LP: #1533249
+  * net/mlx5e: Fix inline header size calculation
+    - LP: #1533249
+  * net: usb: cdc_ncm: Adding Dell DW5812 LTE Verizon Mobile Broadband Card
+    - LP: #1533118
+  * net: usb: cdc_ncm: Adding Dell DW5813 LTE AT&T Mobile Broadband Card
+    - LP: #1533118
+  * powerpc/eeh: Fix recursive fenced PHB on Broadcom shiner adapter
+    - LP: #1532942
+
  -- Luis Henriques <luis.henriques@canonical.com>  Fri, 22 Jan 2016 16:00:29 +0000
 
 linux-raspi2 (4.2.0-1021.28) wily; urgency=low
