--- a/debian.raspi2/changelog
+++ b/debian.raspi2/changelog
@@ -4,6 +4,15 @@ linux-raspi2 (4.2.0-1024.31) UNRELEASED; urgency=low
   CHANGELOG: Use the printchanges target to see the curent changes.
   CHANGELOG: Use the insertchanges target to create the final log.
 
+  [ Ubuntu: 4.2.0-29.34 ]
+
+  * Release Tracking Bug
+    - LP: #1543167
+  * Revert "SAUCE: apparmor: fix sleep from invalid context"
+    - LP: #1542049
+  * Revert "af_unix: Revert 'lock_interruptible' in stream receive code"
+    - LP: #1540731
+
  -- Luis Henriques <luis.henriques@canonical.com>  Tue, 09 Feb 2016 11:00:40 +0000
 
 linux-raspi2 (4.2.0-1023.30) wily; urgency=low
