--- a/debian.raspi2/changelog
+++ b/debian.raspi2/changelog
@@ -4,6 +4,26 @@ linux-raspi2 (4.2.0-1025.32) UNRELEASED; urgency=low
   CHANGELOG: Use the printchanges target to see the curent changes.
   CHANGELOG: Use the insertchanges target to create the final log.
 
+  [ Ubuntu: 4.2.0-30.35 ]
+
+  * SAUCE: cred: Add clone_cred() interface
+    - LP: #1531747, #1534961, #1535150
+    - CVE-2016-1575 CVE-2016-1576
+  * SAUCE: overlayfs: Use mounter's credentials instead of selectively
+    raising caps
+    - LP: #1531747, #1534961, #1535150
+    - CVE-2016-1575 CVE-2016-1576
+  * SAUCE: overlayfs: Skip permission checking for trusted.overlayfs.*
+    xattrs
+    - LP: #1531747, #1534961, #1535150
+    - CVE-2016-1575 CVE-2016-1576
+  * SAUCE: overlayfs: Be more careful about copying up sxid files
+    - LP: #1534961, #1535150
+    - CVE-2016-1575 CVE-2016-1576
+  * SAUCE: overlayfs: Propogate nosuid from lower and upper mounts
+    - LP: #1534961, #1535150
+    - CVE-2016-1575 CVE-2016-1576
+
  -- Luis Henriques <luis.henriques@canonical.com>  Fri, 19 Feb 2016 12:12:51 +0000
 
 linux-raspi2 (4.2.0-1024.31) wily; urgency=low
